--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name" >Job4j Exam</string>
-    <string name="hello">Привет, Niyaz!</string>
+    <string name="hello">Привет, Нияз!</string>
     <string name="but_text1">Кнопка</string>
     <string name="but_text2">Кнопка</string>
     <string name="but_text3">Кнопка</string>
